syntax = "proto3";
package raven.fcu.swicd;

message RavenFCU_SWICD_INSmessage {
	double timestamp = 1;
	double latitude = 2;
	double longitude = 3;
	double altitude = 4;
	float roll = 5;
	float pitch = 6;
	float yaw = 7;
	float accel_x = 8;
	float accel_y = 9;
	float accel_z = 10;
	float barometer = 11;
	float course = 12;
	float speed = 13;
	float velocityN = 14;
	float velocityE = 15;
	float velocityD = 16;
	int32 numSats = 17;
	float declination = 18;
	
	enum FixType {
		GPS_NO_FIX = 0;
		GPS_DEAD_RECKONING = 1;
		GPS_2D = 2;
		GPS_3D = 3;
		GPS_GNSS_DEAD_RECK = 4;
		GPS_TIME_ONLY = 5;
	}
	
	FixType gpsFix = 19;
}
